fix: vertical align redundant usage removed.

--- a/Sources/Styles/Layouts/main.css
+++ b/Sources/Styles/Layouts/main.css
@@ -4,7 +4,6 @@
     margin: 20px;
     padding: 20px;
     text-align: left;
-    vertical-align: center;
     text-indent: 10px;
     white-space: normal;
 }
